[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "pos"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
replit = "^1.2.2"
prettytable = "^0.7.2"
pytz = "^2020.1"
[tool.poetry.dev-dependencies]
